# pocket-inference

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
src/: activations.rs  conv2d_impl.rs  error.rs  h5.rs  lib.rs  python.rs  tensor.rs
src/layers/: batch_normalization.rs  conv2d.rs  dense.rs  dropout.rs  flatten.rs  mod.rs  pooling.rs
src/model/: loader.rs  mod.rs  sequential.rs
tests/: layers.rs  tensor.rs
